--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
-    "mongoose": "^6.0.12"
+    "nodemailer": "^6.7.0",
+    "nodemailer-smtp-transport": "^2.7.4"
   },
   "devDependencies": {},
   "scripts": {
