--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,7 @@ name: CI
 on:
   push:
     branches:
-      - dev
+      - main
 
 jobs:
   BACKEND:
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:  
-          branch: dev
+          branch: main
           appdir: ./
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "notes-app-my" #Must be unique in Heroku
